fixed jumps in the drop-down menu on the custom infographics page

--- a/src/styles/updated-styles.scss
+++ b/src/styles/updated-styles.scss
@@ -2252,5 +2252,10 @@ form .ui-select-container.selectize-control {
 .title-text-left {
   float: left;
 }
+/************fix selectors custom infographics**************/
+
+input.ui-select-search {
+  width: 0 !important;
+}
 
 // Customized Infographics END
